Fix scaling on smaller screens

--- a/static/css/formantsguide.css
+++ b/static/css/formantsguide.css
@@ -11,11 +11,23 @@
   position: relative;
 }
 
-.vowel_area {
+/* these are old settings for absolute px values */
+/* .vowel_area {
   position:absolute;
   width:55px;
   height:90px;
   border-radius: 5px;
+  opacity:0.7;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+} */
+
+/* this is for the relative percentage values*/
+.vowel_area {
+  position:absolute;
+  width:5.7%;
+  height:12.2%;
+  border-radius: 6%;
   opacity:0.7;
   cursor: pointer;
   transition: background-color 0.2s ease;
@@ -27,6 +39,7 @@
 
 .fg-settings-card {
   height: 25rem;
+  margin-top: 1.5rem;
 }
 
 .fg-result-image {
@@ -48,5 +61,12 @@
   margin-left: 2px;
   margin-bottom: 10px;
   cursor: help;
+}
+
+/* change all absolute values to relative percent values for the areas in the vowel quadrilateral */
+/* remove fixed values of height and width to this element and use the below to get responsive vowel quadrilateral */
+#fg-vowel-quadrilateral {
+  max-width: 100%;
+  height: auto;
 }
 
